--- a/.env.example
+++ b/.env.example
@@ -1,3 +1,3 @@
 PORT=8000
-DATABASE= mongodb+srv://fikrcamp:<PASSWORD>@cluster0.mucht.mongodb.net/blogProject
-DB_PASSWORD = fikrcamp
+DATABASE= 
+DB_PASSWORD = 
